--- a/frontend/src/pages/chat/Chat.module.css
+++ b/frontend/src/pages/chat/Chat.module.css
@@ -39,26 +39,29 @@
 
 .chatEmptyStateTitle {
   font-style: normal;
-  font-weight: 700;
-  font-size: 36px;
+  font-weight: 600;
+  font-size: 20px;
   display: flex;
   align-items: flex-end;
   text-align: center;
-  line-height: 24px;
+  letter-spacing: 0.05em;
+  line-height: 1.3; 
   margin-top: 36px;
-  margin-bottom: 0px;
+  margin-bottom: 10px;
+  color: #333333;
 }
 
 .chatEmptyStateSubtitle {
-  margin-top: 20px;
+  margin-top: 10px;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
-  line-height: 150%;
+  line-height: 1.5;
   align-items: flex-end;
   text-align: center;
-  letter-spacing: -0.01em;
-  color: #616161;
+  letter-spacing: 0.02em;
+  color: #4a4a4a;
+  max-width: 70%;
 }
 
 .chatIcon {
